--- a/src/customer-page.html
+++ b/src/customer-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./images/product.ico" />
+    <link rel="shortcut icon" href="./images/favicon.ico" />
     <title>Product</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,6 +19,19 @@
   </head>
 
   <body>
+    <!-- <include src="./partials/header/header.html"></include>
+
+    <include src="./partials/customer-page/clients.html"></include>
+    <include src="./partials/customer-page/advantage.html"></include>
+    <include src="./partials/customer-page/how-work.html"></include>
+    <include src="./partials/customer-page/community.html"></include>
+    <include src="./partials/customer-page/adv.html"></include>
+
+    <include src="./partials/footer/footer.html"></include>
+
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script> -->
+
     <header>
       <a href="" class="logo">
         <!-- <img srcset="" src="" alt="" /> -->
