--- a/src/customer-page.html
+++ b/src/customer-page.html
@@ -19,7 +19,8 @@
   </head>
 
   <body>
-    <!-- <include src="./partials/header/header.html"></include>
+    <include src="./partials/header/header.html"></include>
+    <!-- 
 
     <include src="./partials/customer-page/clients.html"></include>
     <include src="./partials/customer-page/advantage.html"></include>
@@ -27,131 +28,13 @@
     <include src="./partials/customer-page/community.html"></include>
     <include src="./partials/customer-page/adv.html"></include>
 
-    <include src="./partials/footer/footer.html"></include>
+    
 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script> -->
 
-    <header>
-      <a href="" class="logo">
-        <!-- <img srcset="" src="" alt="" /> -->
-        <span class="logo__text">Product</span>
-      </a>
-      <button class="menu">
-        <!-- <svg>
-          <use href=""></use>
-        </svg> -->
-      </button>
-      <nav class="nav">
-        <ul class="nav-list">
-          <li class="nav-list__item">
-            <a class="nav-list__link" href="">Product</a>
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link" href="">Pricing</a>
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link nav-list__link--active" href=""
-              >Customers</a
-            >
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link" href="">Resources</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="login-btn">
-        <button class="login-btn__log">Sign In</button>
-        <button class="login-btn__reg">Sign Up</button>
-      </div>
-      <button>
-        <!-- <svg>
-          <use href=""></use>
-        </svg> -->
-      </button>
-    </header>
-
     <main></main>
 
-    <footer>
-      <div class="footer-field">
-        <a href="" class="logo">
-          <!-- <img srcset="" src="" alt="" /> -->
-          <span class="logo__text">Product</span>
-        </a>
-        <ul class="footer-socials">
-          <li class="footer-socials__item">
-            <a class="footer-socials__link" href="" target="_blank">
-              <!-- <svg class="footer-socials__icon">
-                <use href=""></use>
-              </svg> -->
-            </a>
-          </li>
-          <li class="footer-socials__item">
-            <a class="footer-socials__link" href="" target="_blank">
-              <!-- <svg class="footer-socials__icon">
-                <use href=""></use>
-              </svg> -->
-            </a>
-          </li>
-          <li class="footer-socials__item">
-            <a class="footer-socials__link" href="" target="_blank">
-              <!-- <svg class="footer-socials__icon">
-                <use href=""></use>
-              </svg> -->
-            </a>
-          </li>
-        </ul>
-
-        <div class="resource-field">
-          <h2 class="resource-field__label">Resource</h2>
-          <ul class="footer-nav">
-            <li class="footer-nav__item">
-              <a class="footer-nav__link" href="">About Us</a>
-            </li>
-            <li class="footer-nav__item">
-              <a class="footer-nav__link" href="">Blog</a>
-            </li>
-            <li class="footer-nav__item">
-              <a class="footer-nav__link" href="">Contact</a>
-            </li>
-            <li class="footer-nav__item">
-              <a class="footer-nav__link" href="">FAQ</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="legal-field">
-          <h2 class="legal-field__label">Legal Stuff</h2>
-          <ul class="footer-links">
-            <li class="footer-links__item">
-              <a class="footer-links__link" href="">Disclaimer</a>
-            </li>
-            <li class="footer-links__item">
-              <a class="footer-links__link" href="">Financing</a>
-            </li>
-            <li class="footer-links__item">
-              <a class="footer-links__link" href="">Privacy Policy</a>
-            </li>
-            <li class="footer-links__item">
-              <a class="footer-links__link" href="">Terms of Service</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="footer-reg-field">
-          <p class="footer-reg-field__text">
-            knowing you're always on the best energy deal.
-          </p>
-          <form action="tel">
-            <input type="number" />
-          </form>
-          <button class="footer-reg-field__btn">Sign up Now</button>
-        </div>
-      </div>
-      <p class="footer-privacy">
-        Made With Love By Figmaland All Right Reserved
-      </p>
-    </footer>
+    <include src="./partials/footer/footer.html"></include>
   </body>
 </html>
