--- a/src/customer-page.html
+++ b/src/customer-page.html
@@ -20,21 +20,18 @@
 
   <body>
     <include src="./partials/header/header.html"></include>
-    <!-- 
 
-    <include src="./partials/customer-page/clients.html"></include>
-    <include src="./partials/customer-page/advantage.html"></include>
-    <include src="./partials/customer-page/how-work.html"></include>
-    <include src="./partials/customer-page/community.html"></include>
-    <include src="./partials/customer-page/adv.html"></include>
-
-    
-
-    <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script> -->
-
-    <main></main>
+    <main>
+      <include src="./partials/customer-page/clients.html"></include>
+      <include src="./partials/customer-page/advantage.html"></include>
+      <include src="./partials/customer-page/how-work.html"></include>
+      <include src="./partials/customer-page/community.html"></include>
+      <include src="./partials/customer-page/adv.html"></include>
+    </main>
 
     <include src="./partials/footer/footer.html"></include>
+    <!-- 
+        <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script> -->
   </body>
 </html>
