--- a/src/resources-page.html
+++ b/src/resources-page.html
@@ -20,21 +20,16 @@
 
   <body>
     <include src="./partials/header/header.html"></include>
-    <!-- 
 
-    <include src="./partials/customer-page/clients.html"></include>
-    <include src="./partials/customer-page/advantage.html"></include>
-    <include src="./partials/customer-page/how-work.html"></include>
-    <include src="./partials/customer-page/community.html"></include>
-    <include src="./partials/customer-page/adv.html"></include>
-
-    
-
-    <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script> -->
-
-    <main></main>
+    <main>
+      <include src="./partials/resources-page/hero.html"></include>
+      <include src="./partials/resources-page/news.html"></include>
+      <include src="./partials/resources-page/contact-us.html"></include>
+    </main>
 
     <include src="./partials/footer/footer.html"></include>
+
+    <!-- <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script> -->
   </body>
 </html>
