--- a/src/customer-page.html
+++ b/src/customer-page.html
@@ -30,8 +30,10 @@
     </main>
 
     <include src="./partials/footer/footer.html"></include>
+
     <!-- 
         <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script> -->
+    <script type="module" src="./js/indexScripts/index.js"></script>
   </body>
 </html>
