--- a/src/resources-page.html
+++ b/src/resources-page.html
@@ -31,5 +31,6 @@
 
     <!-- <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script> -->
+    <script type="module" src="./js/indexScripts/index.js"></script>
   </body>
 </html>
