--- a/src/pricing-page.html
+++ b/src/pricing-page.html
@@ -22,11 +22,13 @@
     <include src="./partials/header/header.html"></include>
 
     <main>
-      <include src="./partials/pricing-page/price.html"></include>
+      <include src="./partials/pricing-page/pricing.html">
+        <include src="./stabled-section/price-cards.html"></include>
+      </include>
       <include src="./partials/pricing-page/enterprise.html"></include>
       <include src="./partials/pricing-page/features.html"></include>
       <include src="./partials/pricing-page/faq.html"></include>
-      <include src="./partials/pricing-page/adv.html"></include>
+      <include src="./partials/stabled-section/adv.html"></include>
     </main>
 
     <include src="./partials/footer/footer.html"></include>
